osha.theme Changelog
====================

osha.theme 1.2.16 (2009-08-18)
------------------------------

- Fixed wrong configuration and broken links for anyurl on the rss feeds page (gerken)

osha.theme 1.2.15 (2009-08-17)
------------------------------

- improved testing (gerken)
- replaced logos by new versions made by Cornelis (thomasw)

osha.theme 1.2.14 (2009-08-14)
------------------------------

- Fix for ticket 379 (gerken)

osha.theme 1.2.13 (2009-08-12)
------------------------------

- Deleting users will no longer delete all their roles in the portal. That
  makes user deletion much faster (gerken)
- overwriting atct_album_view.pt from ATContentTypes to hide the folder-listing view if "other"
  content is present; overwriting atctListAlbum.py to also include Large Plone Folder (thomasw)
- make links from image-portlet not fail for URLs that need a '?' (thomasw)
- fixed problem with fullscreen-mode of FCK editor (gerken)

osha.theme 1.2.12 (2009-08-03)
------------------------------

- improved RSS-feed generation (gerken)

osha.theme 1.2.11 (2009-08-02)
------------------------------

- major change for the ERO search: don't use separate fields (schema-extended) for topic and
  target_group any more. Rather, use the osha_metadata vocablary with the 2 sub-vocabs ero_topic
  and ero_target_group (thomasw)


osha.theme 1.2.10 (2009-08-01)
------------------------------

- REVERTED: renaming indexes ero_target_group and ero_topic to getEroTargetGroup and getEroTopic due to unsolved
  problems in data consistency and schema-extending (thomasw)

osha.theme 1.2.9 (2009-08-01)
-----------------------------

- fixed indentation error in rolling_quote (pilz)
- bugfix: the @ attribute selectors in jquery for collage.js are now removed (thomasw)
- fixing broken external link (ticket 366) in international dropdown (thomasw)
- indexed ero_target_group and ero_topic renamed to getEro_target_grop and getEro_topic (gerken)